<resources>
    <!-- Menu item -->
    <string name="app_name">Mobile encryption</string>
    <string name="title_about_program">About program</string>
    <string name="title_file">File</string>
    <string name="title_open">Open</string>
    <string name="title_save">Save</string>
    <string name="title_secret_key">Encryption method</string>

    <!-- Activity -->
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="password">Password</string>
    <string name="encrypt_text">Encrypted text</string>
    <string name="text">Text</string>
    <string name="encode">Encrypt</string>
    <string name="decrypt_text">Decrypted text</string>
    <string name="decode">Decrypt</string>

    <!-- PermissionUtil -->
    <string name="granted">Granted</string>
    <string name="denied">Denied</string>
    <string name="title_alert_dialog">Permission required</string>
    <string name="message_alert_dialog">Repository access is not allowed. Turn it on in Settings</string>
    <string name="rationale_alert_dialog">Permission is required to open and save files</string>
    <string name="user_denied">Repository access permission denied</string>
    
    <!-- MenuActivity -->
    <string name="message_about_program">
        Mobile Encryption application for encrypting and decrypting files\n\nBy: MisterC\nEmail: Artemiy.vlog@gmail.com\n
    </string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="choose_secret_key">Select message encryption</string>

    <!-- EncryptActivity -->
    <string name="encrypt_want_password">You must enter a password to encrypt</string>

    <!-- DecryptActivity -->
    <string name="decrypt_want_password">You must enter a password to decrypt</string>
    <string name="title_version">Version</string>
    <string name="summary_version">1.3.5</string>
    <string name="title_developer">Developer</string>
    <string name="summary_developer">MisterC</string>
    <string name="title_settings">Settings</string>

</resources>
