<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EncryptActivity">
    <item
        android:id="@+id/mn_file_action"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:title="@string/title_file"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/mn_open_file"
                android:icon="@drawable/ic_folder_open_black_24dp"
                android:title="@string/title_open"/>
            <item
                android:id="@+id/mn_save_file"
                android:icon="@drawable/ic_save_black_24dp"
                android:title="@string/title_save"/>
        </menu>
    </item>
    <item
        android:id="@+id/mn_security"
        android:icon="@drawable/ic_lock_white_24dp"
        android:title="@string/title_secret_key"
        app:showAsAction="ifRoom">
    </item>
</menu>